# trade-sentinel-ai

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json
apps/api/: Dockerfile  pyproject.toml
apps/api/prompts/: context_v1.txt  context_v10.txt  context_v2.txt  context_v3.txt  context_v4.txt  context_v5.txt  context_v6.txt  context_v7.txt  context_v8.txt  context_v9.txt  macro_v1.txt  macro_v2.txt
apps/api/scripts/: generate_sp500_universe.py  ingest_sec_13f_bulk.py  ingest_sec_nport_bulk.py
apps/api/src/trade_sentinel_api/: __init__.py  config.py  db.py  main.py
apps/api/tests/: conftest.py  test_health.py
apps/api/tests/api/: test_risk.py
apps/api/tests/context/: test_build.py  test_endpoint.py
apps/api/tests/earnings/: test_calendar.py  test_snapshot.py
apps/api/tests/filings/: test_edgar.py  test_edgartools_adapter.py  test_filing_registry.py  test_form4.py  test_sec_filings.py  test_sec_http.py
apps/api/tests/fixtures/: context_mocks.py
apps/api/tests/fundamentals/: test_assessment.py  test_snapshot.py
apps/api/tests/infra/: test_db.py  test_job_events.py  test_scheduler.py  test_watchlists.py
apps/api/tests/llm/: test_factory.py  test_parse.py  test_prompt_registry.py
apps/api/tests/macro/: test_briefing.py  test_events.py  test_overlay.py
apps/api/tests/market/: test_currency.py  test_data.py  test_news.py  test_screener.py
apps/api/tests/smart_money/: test_13f.py  test_13f_bulk.py  test_congressional.py  test_cot.py  test_form35.py  test_gex.py  test_hub.py  test_nport.py  test_options_ticks.py  test_signals.py
(+231 files in other folders)
