[project]
name = "trade-sentinel-api"
version = "0.1.0"
description = "TradeSentinel AI FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "yfinance>=0.2.48",
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-ollama>=0.2.0",
    "langchain-core>=0.3.0",
    "python-dotenv>=1.0.0",
    "psycopg[binary]>=3.2.0",
    "beautifulsoup4>=4.12.0",
    "edgartools>=5.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trade_sentinel_api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-m 'not live'"
markers = [
    "live: hits a running API (set API_URL); skipped in default CI",
]
